Update task_4 densenet161
* 20 epochs
* lr 1e-4, multistep [10], gamma 0.1

--- a/task_4/task_4.ipynb
+++ b/task_4/task_4.ipynb
@@ -326,8 +326,8 @@
     "        img_2 = Image.fromarray(cv2.cvtColor(images[i_2], cv2.COLOR_BGR2RGB))\n",
     "        img_3 = Image.fromarray(cv2.cvtColor(images[i_3], cv2.COLOR_BGR2RGB))\n",
     "        return self.transform(img_1), self.transform(img_2), self.transform(img_3)\n",
-    "        #return (images[i_1] - images_mean)[0], (images[i_2] - images_mean)[0], (images[i_3] - images_mean)[0]\n",
     "\n",
+    "    # Required for Map-style dataset\n",
     "    def __len__(self):\n",
     "        return len(self.triplets)\n",
     "    \n",
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
     "\n",
     "class NeuralNet(nn.Module):\n",
     "    \n",
-    "    EMBEDDING_DIM=64\n",
+    "    EMBEDDING_DIM = 128\n",
     "    \n",
     "    def __init__(self, inp = 2208, h1=512, d=0.35):\n",
     "        super(NeuralNet, self).__init__()\n",
@@ -409,45 +409,6 @@
     "        x = x.reshape(x.size(0), -1)\n",
     "        x = self.fc(x)\n",
     "        return x\n",
-    "    \n",
-    "    \"\"\"def __init__(self):\n",
-    "        super(NeuralNet, self).__init__()\n",
-    "        self.conv = nn.Sequential(\n",
-    "            nn.Conv2d(3, 32, 7),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "            #nn.Dropout(0.3),\n",
-    "            nn.Conv2d(32, 64, 5),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "            #nn.Dropout(0.3),\n",
-    "            nn.Conv2d(64, 128, 3),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "            #nn.Dropout(0.25),\n",
-    "            nn.Conv2d(128, 256, 1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "            #nn.Dropout(0.2),\n",
-    "            nn.Conv2d(256, 28, 1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "            #nn.Dropout(0.2),\n",
-    "        )\n",
-    "        \n",
-    "        self.fc = nn.Sequential(\n",
-    "            nn.Linear(3276, 512),\n",
-    "            nn.PReLU(),\n",
-    "            nn.Linear(512, NeuralNet.EMBEDDING_DIM)\n",
-    "        )\n",
-    "        \n",
-    "        self.apply(self.init_weights)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        x = self.conv(x)\n",
-    "        x = x.reshape(x.size(0), -1)\n",
-    "        x = self.fc(x)\n",
-    "        return x\"\"\"\n",
     "    \n",
     "    def init_weights(self, m):\n",
     "        if isinstance(m, nn.Conv2d):\n",
@@ -553,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 77,
    "metadata": {
     "scrolled": true
    },
@@ -1431,7 +1392,7 @@
       "      (1): PReLU(num_parameters=1)\n",
       "      (2): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "      (3): Dropout(p=0.35, inplace=False)\n",
-      "      (4): Linear(in_features=512, out_features=64, bias=True)\n",
+      "      (4): Linear(in_features=512, out_features=128, bias=True)\n",
       "    )\n",
       "  )\n",
       ")\n"
@@ -1529,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1573,20 +1534,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc1391fbff3848e78b49f47c3cd698d3",
+       "model_id": "80dede9fb32041e89c4c5ea0768bd242",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=13380.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=17840.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -1595,7 +1556,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce161928d01e4f0eb877c6328d3174db",
+       "model_id": "7ac191ef884f400b8b30f45073804743",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1624,13 +1585,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 1/15]: Loss 0.289 (0.413), Val Accuracy 0.6852941176470588, Train Accuracy 0.5994604820627802\n"
+      "\r",
+      "\r",
+      "[Epoch 1/20]: Loss 0.455 (0.596), Val Accuracy 0.657563025210084, Train Accuracy 0.613316283632287\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01ae820b55e04223a7c0e395e0447716",
+       "model_id": "77d7146d6c21453e9c1cd0f7e3e703c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1659,13 +1622,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 2/15]: Loss 0.308 (0.339), Val Accuracy 0.6978991596638655, Train Accuracy 0.6348970011210763\n"
+      "\r",
+      "\r",
+      "[Epoch 2/20]: Loss 0.403 (0.437), Val Accuracy 0.6861344537815126, Train Accuracy 0.632742432735426\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76195416444d40329963cd11704f05ae",
+       "model_id": "6f55096f2bc449908e38da3fc73a2855",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1694,13 +1659,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 3/15]: Loss 0.234 (0.306), Val Accuracy 0.7084033613445379, Train Accuracy 0.6495410594170403\n"
+      "\r",
+      "\r",
+      "[Epoch 3/20]: Loss 0.356 (0.359), Val Accuracy 0.6756302521008404, Train Accuracy 0.6406074831838565\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "765a63f837a84ba39e828b63b4ededcc",
+       "model_id": "b10b1868f1344eb28ac539c1c90874fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1729,13 +1696,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 4/15]: Loss 0.261 (0.283), Val Accuracy 0.7189075630252101, Train Accuracy 0.6575987948430493\n"
+      "\r",
+      "\r",
+      "[Epoch 4/20]: Loss 0.301 (0.295), Val Accuracy 0.6936974789915966, Train Accuracy 0.6527466367713004\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fb0e4c388d143df80039ea3d1508bdd",
+       "model_id": "b4b46d79444b4ed4afd09c0a4dc9da32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1764,13 +1733,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 5/15]: Loss 0.190 (0.266), Val Accuracy 0.7096638655462185, Train Accuracy 0.663642096412556\n"
+      "\r",
+      "\r",
+      "[Epoch 5/20]: Loss 0.235 (0.249), Val Accuracy 0.6995798319327731, Train Accuracy 0.6574936939461884\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d5dec18a8fa45a0bf9e598d9f260fe9",
+       "model_id": "beeb1ed9dc0247188ceea8b184d4e944",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1799,13 +1770,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 6/15]: Loss 0.154 (0.247), Val Accuracy 0.7235294117647059, Train Accuracy 0.6737668161434978\n"
+      "\r",
+      "\r",
+      "[Epoch 6/20]: Loss 0.134 (0.206), Val Accuracy 0.7180672268907563, Train Accuracy 0.6658141816143498\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2e00f4353ec4249bd5e3f5182227c74",
+       "model_id": "2c4383fb33f342e5b968994097214dec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1834,13 +1807,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 7/15]: Loss 0.297 (0.233), Val Accuracy 0.7243697478991596, Train Accuracy 0.6800903867713004\n"
+      "\r",
+      "\r",
+      "[Epoch 7/20]: Loss 0.162 (0.173), Val Accuracy 0.738655462184874, Train Accuracy 0.6812464966367713\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13995c5186ff43f2a19d17f792a27ab2",
+       "model_id": "636602c7fc3f49e890895f74782bc09f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1869,13 +1844,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 8/15]: Loss 0.169 (0.220), Val Accuracy 0.7289915966386554, Train Accuracy 0.690845711883408\n"
+      "\r",
+      "\r",
+      "[Epoch 8/20]: Loss 0.134 (0.152), Val Accuracy 0.7277310924369748, Train Accuracy 0.6896370515695067\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b1b95d50b9944cc8b9722d8d85576b9",
+       "model_id": "c1fa2bf9c0eb46348441e510e4c91374",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1904,13 +1881,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 9/15]: Loss 0.192 (0.211), Val Accuracy 0.7441176470588236, Train Accuracy 0.6938586042600897\n"
+      "\r",
+      "\r",
+      "[Epoch 9/20]: Loss 0.163 (0.140), Val Accuracy 0.7399159663865547, Train Accuracy 0.7003047926008968\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01a11a6e47264116be98a68c076dedd2",
+       "model_id": "4a2b72118fe94100a9109e69b2e79eec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1939,13 +1918,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 10/15]: Loss 0.245 (0.203), Val Accuracy 0.7525210084033613, Train Accuracy 0.6981852578475336\n"
+      "\r",
+      "\r",
+      "[Epoch 10/20]: Loss 0.141 (0.134), Val Accuracy 0.734873949579832, Train Accuracy 0.7091683015695067\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffed1d68c929408c8959cdef3071f7bb",
+       "model_id": "93acaa9410c6424f9b4878001df3a972",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1974,13 +1955,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 11/15]: Loss 0.138 (0.197), Val Accuracy 0.7521008403361344, Train Accuracy 0.6957153867713004\n"
+      "\r",
+      "\r",
+      "[Epoch 11/20]: Loss 0.112 (0.125), Val Accuracy 0.746218487394958, Train Accuracy 0.7292425728699552\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfc75a7e24f24abbbdf277d28f5b7295",
+       "model_id": "009795f657fb4477afd61f751d722fda",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2009,13 +1992,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 12/15]: Loss 0.184 (0.186), Val Accuracy 0.7483193277310924, Train Accuracy 0.7045263452914798\n"
+      "\r",
+      "\r",
+      "[Epoch 12/20]: Loss 0.092 (0.121), Val Accuracy 0.7470588235294118, Train Accuracy 0.7406285033632287\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5f414a4f9d64d519859eb227ddba998",
+       "model_id": "18a74a6277ab4212810c1d0649043140",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2044,13 +2029,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 13/15]: Loss 0.175 (0.178), Val Accuracy 0.7441176470588236, Train Accuracy 0.711252802690583\n"
+      "\r",
+      "\r",
+      "[Epoch 13/20]: Loss 0.106 (0.119), Val Accuracy 0.7592436974789916, Train Accuracy 0.7435713284753364\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b1a53625c1845d7af2e54a2990f9b89",
+       "model_id": "ba21b3969ed54d839e737e0b31e3f04a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2079,13 +2066,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 14/15]: Loss 0.108 (0.172), Val Accuracy 0.7445378151260504, Train Accuracy 0.7141430773542601\n"
+      "\r",
+      "\r",
+      "[Epoch 14/20]: Loss 0.128 (0.118), Val Accuracy 0.7596638655462185, Train Accuracy 0.7476877802690582\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fc38628e9f04952a4743275e6d80960",
+       "model_id": "3b3a6dc91b704667be7182d123744cfa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2114,21 +2103,212 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 15/15]: Loss 0.170 (0.166), Val Accuracy 0.7563025210084033, Train Accuracy 0.7200987948430493\n"
+      "\r",
+      "\r",
+      "[Epoch 15/20]: Loss 0.161 (0.116), Val Accuracy 0.7680672268907563, Train Accuracy 0.7520144338565022\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "250fe1990b014dfdb71c80fee96cb25e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 16/20]: Loss 0.123 (0.115), Val Accuracy 0.7647058823529411, Train Accuracy 0.7549222253363229\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3fbf411a615b412db3781aa6fbd4a198",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 17/20]: Loss 0.122 (0.114), Val Accuracy 0.7638655462184873, Train Accuracy 0.757952634529148\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "26bc70c6cdfb4af080d437ba8186022d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 18/20]: Loss 0.090 (0.112), Val Accuracy 0.7689075630252101, Train Accuracy 0.7623668721973094\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5d1d6a3be13442c7adf7d0e9bd26c176",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 19/20]: Loss 0.114 (0.112), Val Accuracy 0.7626050420168067, Train Accuracy 0.7600721692825112\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "18c70c7d6eb544d08d0dfad78ab8fb06",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 20/20]: Loss 0.109 (0.111), Val Accuracy 0.7718487394957984, Train Accuracy 0.7637857343049327\n"
      ]
     }
    ],
    "source": [
+    "#model_pretrained.load_state_dict(torch.load('trained_models/densenet161_model/densenet161_model_epoch14.pth'))\n",
+    "#model_pretrained = model_pretrained.to(device)\n",
+    "\n",
     "criterion_pretrained = nn.TripletMarginLoss(margin=0.2)\n",
-    "optimizer_pretrained = torch.optim.Adam(params_to_update, lr=1e-4)\n",
-    "scheduler_pretrained = None\n",
-    "#scheduler_pretrained = torch.optim.lr_scheduler.MultiStepLR(optimizer_pretrained, milestones=[2], gamma=0.5)\n",
+    "optimizer_pretrained = torch.optim.Adam(params_to_update, lr=1e-3)\n",
+    "#scheduler_pretrained = None\n",
+    "scheduler_pretrained = torch.optim.lr_scheduler.MultiStepLR(optimizer_pretrained, milestones=[10], gamma=0.1)\n",
     "#scheduler_pretrained = torch.optim.lr_scheduler.StepLR(optimizer_pretrained, 2, gamma=0.1)\n",
     "\n",
     "\n",
     "batch_size = 64\n",
+    "epochs_pretrained = 20\n",
     "\n",
-    "Training().start(model_pretrained, optimizer_pretrained, train_set, criterion_pretrained, scheduler_pretrained, batch_size, model_name='densenet161_model')"
+    "Training().start(model_pretrained, optimizer_pretrained, train_set, criterion_pretrained, scheduler_pretrained, batch_size, epochs=epochs_pretrained, model_name='densenet161_model')"
    ]
   },
   {
@@ -2140,13 +2320,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29d2764a3f664535af822a5d968a3146",
+       "model_id": "6aa18c2700464a9daad6c3490cf66c7b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2171,14 +2351,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train set accuracy [pre-trained model]: 0.7536143102180838\n"
+      "Train set accuracy [pre-trained model]: 0.7643609759512724\n"
      ]
     }
    ],
@@ -2188,13 +2368,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de78cd5810a741b2a6cd3d31c66a2c38",
+       "model_id": "5f31a6a3a0a84aa9ab0666d3ee61bcee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2220,7 +2400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2243,7 +2423,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
